--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -98,7 +98,7 @@
                 <view class="week">{{TIME.week(checkInDate)}}</view>
                 <view class="date-picker-type">入住日期</view>
               </view>
-              <view class="night-num">{{TIME.countDown((checkOutDate - checkInDate) / 1000, 'dd')}}晚</view>
+              <view class="night-num">{{nightNum}}晚</view>
               <view class="date-picker row">
                 <view class="date">{{TIME.transform(checkOutDate, 'MM月DD日')}}</view>
                 <view class="week">{{TIME.week(checkOutDate)}}</view>
@@ -128,7 +128,7 @@
                   <view class="room-type-status">{{ item.roomList.length }}个可订价格</view>
                 </view>
                 <view class="price-wrap row" catchtap="toggleFold" data-index="{{ index }}">
-                  <price-unit price="{{hotelInfo.price || 0}}" isStartPrice />
+                  <price-unit price="{{item.price || 0}}" isStartPrice />
                   <image class="toggle-fold-icon" src="./images/{{item.fold ? 'down' : 'up'}}-btn-fill.png" />
                 </view>
               </view>
