--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -138,7 +138,16 @@
               </view>
             </van-index-anchor>
             <view class="room-list" wx:if="{{!item.fold}}">
-              <view class="room-item" wx:for="{{item.roomList}}" wx:key="roomIdx" wx:for-index="roomIdx" wx:for-item="room">
+              <view 
+                class="room-item" 
+                wx:for="{{item.roomList}}" 
+                wx:key="roomIdx" 
+                wx:for-index="roomIdx" 
+                wx:for-item="room"
+                bindtap="showNoticePopup"
+                data-type-index="{{index}}"
+                data-room-index="{{roomIdx}}"
+              >
                 <view class="room-info-wrap row">
                   <view class="breakfast-status">{{room.breakfastNum ? room.breakfastNum + '份早餐' : '无早餐'}}</view>
                   <view class="room-info">{{room.guestNum}}人入住</view>
@@ -149,7 +158,7 @@
                   <view>{{room.cancellable ? "8月16日16点前取消扣除10%手续费" : "不可取消"}}</view>
                 </view>
                 <view class="shop-name">来自{{room.shopInfo.name}}</view>
-                <view class="room-price-wrap row bottom">
+                <view class="room-price-wrap row bottom" catchtap="">
                   <price-unit price="{{room.price || 0}}" />
                   <view class="order-btn">
                     <view class="order-btn-title">订</view>
@@ -274,7 +283,7 @@
   </view>
 </view>
 
-<notice-popup show="{{noticePopupVisible}}" info="{{curTicketInfo}}" bind:hide="hideNoticePopup" />
+<notice-popup show="{{noticePopupVisible}}" info="{{curRoomInfo}}" bind:hide="hideNoticePopup" />
 
 <van-calendar 
   default-date="{{[checkInDate, checkOutDate]}}"
