--- a/pages/subpages/mall/hotel/components/notice-popup/index.wxss
+++ b/pages/subpages/mall/hotel/components/notice-popup/index.wxss
@@ -11,6 +11,9 @@
 .notice-info-wrap {
   height: 1000rpx;
 }
+.notice-main {
+  padding: 0 32rpx;
+}
 
 .banner-wrap {
   position: relative;
@@ -18,7 +21,7 @@
 .banner-dots {
   position: absolute;
   right: 24rpx;
-  bottom: 48rpx;
+  bottom: 24rpx;
   padding: 0 12rpx;
   height: 40rpx;
   color: #fff;
@@ -35,6 +38,36 @@
 }
 .cur-dot {
   font-size: 24rpx;
+}
+
+.room-type-name {
+  margin-top: 24rpx;
+  color: #333;
+  font-size: 32rpx;
+  font-weight: bold;
+}
+.room-info-detail {
+  display: flex;
+  margin-top: 12rpx;
+  font-size: 26rpx;
+  font-weight: normal;
+}
+.info-label {
+  color: #333;
+}
+.info-content {
+  color: #999;
+}
+
+.room-facility-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+}
+.room-facility-item {
+  margin-bottom: 6rpx;
+  min-width: 33%;
+  color: #999;
 }
 
 .notice-item {
